tests/NormalTests/paczka2/big_fuzzy/80698740.err
Error in line 6: 02ZbWPb A638 28,9
Error in line 3: Bx0F5RO0 A638 3,2
Error in line 5: amW0UGPf S123 17,4
Error in line 10: amW0UGPf A38 50,4
Error in line 8: Bx0F5RO0 S123 82,8
Error in line 7: 02ZbWPb A808 72,6
Error in line 24: 02ZbWPb A38 23,8
Error in line 32: 02ZbWPb A808 5,3
Error in line 40: 02ZbWPb A638 44,3
Error in line 43: p6VtBTht4 A38 76,7
Error in line 45: A638 A808 66,9
Error in line 67: R0R55wda6WJ S123 -1,0
Error in line 59: R0R55wda6WJ S123 98,5
Error in line 75: amW0UGPf A638 302,7
Error in line 58: XHD S123 273,3
Error in line 101: p6VtBTht4 S123 0,2
Error in line 108: Bx0F5RO0 A638 70,4
Error in line 112: Bx0F5RO0 A808 29,8
Error in line 117: amW0UGPf S123 20,5
Error in line 116: Bx0F5RO0 A38 31,6
Error in line 125: Bx0F5RO0 A638 76,2
Error in line 128: Bx0F5RO0 A808 53,6
Error in line 127: XHD A808 345,7
Error in line 144: R0R55wda6WJ S123 82,5
Error in line 147: R0R55wda6WJ A38 58,0
Error in line 148: R0R55wda6WJ A638 28,6
Error in line 150: R0R55wda6WJ S123 35,4
Error in line 142: amW0UGPf A638 106,8
Error in line 157: R0R55wda6WJ A38 63,6
Error in line 149: XHD A38 33,4
Error in line 136: Bx0F5RO0 A38 82,6
Error in line 168: Bx0F5RO0 A808 1,3
Error in line 186: p6VtBTht4 A808 89,4
Error in line 189: p6VtBTht4 S123 78,8
Error in line 197: R0R55wda6WJ S123 55,8
Error in line 196: 02ZbWPb A638 34,7
Error in line 195: XHD A38 34,2
Error in line 212: amW0UGPf A38 81,7
Error in line 219: amW0UGPf S123 23,6
Error in line 204: R0R55wda6WJ A38 67,4
Error in line 221: amW0UGPf A38 8,5
Error in line 240: amW0UGPf A808 44,5
Error in line 243: amW0UGPf A638 10,9
Error in line 244: A638 A638 66,1
Error in line 241: 02ZbWPb A638 57,3
